Tested how to maximize the window size, apparently it is not supported yet